tests/fixtures/invalid/invalid_scalar_type_specifier_combination.c
int main(void) {
    signed unsigned int value = 1;
    return value;
}
